--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input  class="input" type="text" name="Caption" value="">
         <br>
         <br>
-        <label>Discription : </label><br>
+        <label>Description : </label><br>
         <textarea class="input"  name="Discription"  rows="10" cols="30"></textarea><br>
         <br>
         <br>
